--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,6 +69,69 @@ nav {
 	background: #ffffff;
 }
 
+.main-screen {
+	display: grid;
+	background-image: url(../img/bg-image-1.svg);
+	height: 960px;
+	background-size: cover;
+
+}
+
+.h1 {
+	font-size: var(--h1);
+	font-weight: 700;
+	font-family: 'Bebas Neue', sans-serif;
+	letter-spacing: 3px;
+
+}
+
+.h3 {
+	font-size: var(--h3);
+	font-weight: 700;
+	font-family: 'Bebas Neue', sans-serif;
+	letter-spacing: 2px;
+}
+
+.btn {
+	padding: 16px 72px;
+	font-family: 'Open Sans';
+	font-size: 16px;
+	font-weight: 700;
+	border: none;
+	border-radius: 4px;
+	text-transform: uppercase;
+}
+
+.btn__primary {
+	background-color: var(--primaryColor);
+}
+
+.call-to-action {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+
+.cta--description {
+	margin-top: 60px;
+}
+
+.btn--cta {
+	margin-top: 60px;
+}
+
+.p__story {
+	font-size: 12px;
+	font-weight: 700;
+}
+
+.scroll-down-button {
+	align-items: center;
+	margin-top: 285px;
+	justify-content: center;
+}
+
 /* responsive  */
 @media screen and (max-width:992px) {
 
