--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,10 +16,15 @@
 	box-sizing: border-box;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	font-family: 'Open Sans', sans-serif;
 	color: #ffff;
 	font-size: var(--body);
+	overflow-x: hidden;
 }
 
 nav {
@@ -71,7 +76,6 @@ nav {
 .main-screen {
 	display: grid;
 	background-image: url(../img/bg-image-1.svg);
-	height: 960px;
 	background-size: cover;
 	height: 100vh;
 	width: 100vw;
@@ -133,7 +137,19 @@ nav {
 
 }
 
+/* About gallery */
+.about__gallery {
+	background-image: url(../img/bg-image-2.svg);
+	background-size: cover;
+	height: 100vh;
+	width: 100vw;
+	background-position: center;
+}
 
+.btn--story {
+	text-decoration: none;
+	color: #ffffff;
+}
 
 /* responsive  */
 @media screen and (max-width:992px) {
