about and gallery responsive

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -144,18 +144,45 @@ nav {
 	height: 100vh;
 	width: 100vw;
 	background-position: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 0 5rem;
+
 }
+
 
 .btn--story {
 	text-decoration: none;
 	color: #ffffff;
 }
 
+.gallery {
+	display: flex;
+	justify-content: space-between;
+}
+
+
+.carousel-item img {
+	width: 100%;
+	height: 100%;
+}
+
+.h1__gallery {
+	width: 40%;
+}
+
+
+
 /* responsive  */
 @media screen and (max-width:992px) {
 
 	.menu__container {
 		grid-template-columns: 0.5fr 0.3fr;
+	}
+
+	.about__gallery {
+		padding: 1rem;
 	}
 }
 
@@ -207,6 +234,7 @@ nav {
 		transition: all 0.5 ease;
 	}
 
+
 	.nav-links:hover {
 		background-color: black;
 		width: 100%;
@@ -232,5 +260,17 @@ nav {
 	#mobile-menu.is-active .bar:nth-child(3) {
 		transform: translateY(-8px) rotate(-45deg);
 		transition: all 0.3s ease-out;
+	}
+
+	.about__gallery {
+		padding: 0.5rem;
+	}
+
+	.gallery {
+		flex-direction: column;
+	}
+
+	.about__gallery {
+		height: 60vh;
 	}
 }
