--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,9 +3,9 @@
 
 :root {
 	--h1: 5vmax;
-	--h2: 36px;
+	--h2: 2.25px;
 	--h3: 1.5vmax;
-	--body: 18px;
+	--body: 1.125vmax;
 	--subText: 14px;
 	--primaryColor: #FFB548;
 }
@@ -172,6 +172,65 @@ nav {
 	width: 40%;
 }
 
+.game-features {
+	background-image: url(../img/bg-image-3.png);
+	background-size: cover;
+	height: 100vh;
+	width: 100vw;
+	background-position: center;
+	display: flex;
+	flex-direction: row-reverse;
+	align-items: center;
+	padding: 0 5rem;
+}
+
+.container__list--features {
+	margin-top: 4.5vmax;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+}
+
+.progress {
+	width: 0.125vmax;
+	height: 10vmax;
+	position: absolute;
+	left: 1.5%;
+	z-index: 1;
+	top: 7%;
+	background-color: #fff;
+}
+
+.list-progress {
+	display: flex;
+	margin-bottom: 3.5vmax;
+}
+
+.circle {
+	height: 1vmax;
+	width: 1vmax;
+	border: 0.125vmax solid #ffff;
+	border-radius: 50%;
+	display: inline-block;
+	z-index: 2;
+	margin-top: 1vmax;
+	margin-right: 1vmax;
+}
+
+.circle.active {
+	background-color: #ffff;
+}
+
+.h3__list {
+	font-size: 3vmax;
+	color: #FFB548;
+}
+
+.dot-list {
+	display: flex;
+	align-items: center;
+}
+
 
 
 /* responsive  */
@@ -272,5 +331,9 @@ nav {
 
 	.about__gallery {
 		height: 60vh;
+	}
+
+	.list-progress {
+		margin-bottom: 2vmax;
 	}
 }
